--- a/Custom MineOS.app/Localizations/Russian.lang
+++ b/Custom MineOS.app/Localizations/Russian.lang
@@ -1,5 +1,5 @@
 {
-	warn = "Внимание! \nСохраните все ваши файлы перед началом прошивки, компьютер будет перезагружен!",
+	warn = "Внимание! Сохраните все ваши файлы перед началом прошивки, компьютер будет перезагружен!",
 	inst = "Начать прошивку",
 	comp = "Прошивка завершена",
 }
