Added github link

--- a/Custom MineOS.app/Localizations/Russian.lang
+++ b/Custom MineOS.app/Localizations/Russian.lang
@@ -2,4 +2,5 @@
 	warn = "Внимание! Сохраните все ваши файлы перед началом прошивки, компьютер будет перезагружен!",
 	inst = "Начать прошивку",
 	comp = "Прошивка завершена",
+	atxt = "Обо всех багах сообщать на страницу AppMarket или на оффициальный github репозиторий:",
 }
